syntax = "proto3";

import "common/ComponentRequest.proto";
import "activity/ActivityFlexLinkResponse.proto";

option java_package = "cn.migu.selection.proto.activityflexlinkservice";
option java_outer_classname = "_ActivityFlexLinkService";
option java_generic_services = true;

service ActivityFlexLinkService{

	rpc getActivityFlexLinkInfo (ComponentRequest) returns (ActivityFlexLinkResponse);

}